# exampleParsingWordExcel

./: .gitignore  How to create project in VS with src files.docx  WinFormsApplicationVB.sln  pom.xml  Документация к коду примера.docx  Документация к коду примера.html
VBA.NET/: ~$кументация к коду примера.docx
VBA.NET/WinFormsApplicationVB/: Handler.vb  Logger.vb  MainForm.Designer.vb  MainForm.resx  MainForm.vb  VelesStroyConverterApp.vbproj  packages.config
VBA.NET/WinFormsApplicationVB/My Project/: Application.Designer.vb  AssemblyInfo.vb  Settings.Designer.vb
WinFormsApplicationVB/: MainForm.Designer.vb  MainForm.vb  VelesStroyConverterApp.vbproj  WinFormsApplicationVB_TemporaryKey.pfx
WinFormsApplicationVB/My Project/: Resources.Designer.vb
cpp/app/: CMakeLists.txt  main.cpp
cpp/lib/handler/: CMakeLists.txt
cpp/lib/handler/include/handler/: handler.h
cpp/lib/handler/src/: handler.cpp
cpp/plugin/main_window_pl/: CMakeLists.txt  uic_handling.cmake
cpp/plugin/main_window_pl/include/main_window_pl/: main_window.h  ui_main_window.h
cpp/plugin/main_window_pl/src/: main_window.cpp
python/: handler.py  main.py  main_window.py  main_window.ui  requirements.txt  Документация.docx
Документация к коду примера.files/: filelist.xml  props002.xml
